# Eco2AI

./: .gitignore  LICENSE  README.md  google1f932b2027de4af7 (1).html  index.html  pyproject.toml  setup.py  test.ipynb
eco2ai/: MLTracker.py  __init__.py  emission_track.py  utils.py
eco2ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eco2ai/data/: carbon_index.csv  config.txt  cpu_names.csv
eco2ai/tools/: tools_cpu.py  tools_gpu.py  tools_ram.py
examples/: Eco2AI tutorial torch.ipynb  Eco2AI tutorial.ipynb
