[tool.poetry]
name = "eco2ai"
version = "0.1.0"
description = "emission tracking library"
authors = ["AI Lab",
            "Vladimir Lazarev <lazarev@airi.net>",
            "Nikita Zakharenko <nnzakharenko@sberbank.ru>",
            "Semyon Budyonny  <sanbudenny@sberbank.ru>",
            "leonid zhukov <lezhukov@sberbank.ru>"]

homepage = "https://github.com/sb-ai-lab/Eco2AI"
repository = "https://github.com/sb-ai-lab/Eco2AI"

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
readme = "README.md"
packages = [
    { include = "eco2ai"}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "1.21"
pandas = "1.3.5"
APScheduler = "^3.9.1"
requests = "^2.28.1"
pynvml = "^11.4.1"
psutil = "^5.9.1"
py-cpuinfo = "^8.0.0"
tzlocal = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
