[tool.poetry]
name = "eco2ai"
version = "0.2.6"
description = "emission tracking library"
authors = ["AI Lab",
            "Vladimir Lazarev <lazarev@airi.net>",
            "Nikita Zakharenko <nnzakharenko@sberbank.ru>",
            "Semyon Budyonny  <sanbudenny@sberbank.ru>",
            "leonid zhukov <lezhukov@sberbank.ru>"]

homepage = "https://github.com/sb-ai-lab/Eco2AI"
repository = "https://github.com/sb-ai-lab/Eco2AI"

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
readme = "README.md"
packages = [
    { include = "eco2ai"}
]

[tool.poetry.dependencies]
python = "*"
pandas = [
    {version = ">=1.2.1,<=1.3.5", python = ">=3.7.1, <3.8" },
    {version = ">=1.4.0,<=1.4.3", python = ">=3.8"}
    ]

#{version = ">=1.0.0,<=1.1.5", python = ">=3.6.1"},

APScheduler = [
    {version = "*",python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"}
    ]
requests = [
    {version = "*",python = ">=3.7, <4"}
    ]

pynvml = [
    {version = "*",python = ">=3.6"}
    ]

psutil = "^5.9.1"

tzlocal = [
    {version = "*",python = ">=3.6"}
    ]

tornado = [
    {version = "*",python = ">=3.7"}
    ]

py-cpuinfo = [
    {version = "*",python = ">=3.7"}
    ]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
